# codecrafters-http-server-c

./: CMakeLists.txt  README.md
app/: server.c
